--- a/Dokumentacija/Faza2/prototip/lada.html
+++ b/Dokumentacija/Faza2/prototip/lada.html
@@ -69,7 +69,7 @@
                             <h3 class="card-title">Lada Niva 2021</h3>
                         </div>
                         <div class="col-auto" style="display: flex;"> 
-                            <h5>4.53</h5>&nbsp;&nbsp;&nbsp;&nbsp;<img src="/img/star.png" style="height: 3ex;">
+                            <h5>4.53</h5>&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/star.png" style="height: 3ex;">
                         </div>
                     </div>
                     <div class="row">
