fix fr defekata

--- a/Dokumentacija/Faza2/prototip/izmeni.html
+++ b/Dokumentacija/Faza2/prototip/izmeni.html
@@ -21,7 +21,7 @@
               <div class="collapse navbar-collapse mr-4" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                   <li class="nav-item">
-                      <a class="nav-link" href="rezervacije.html" >Rezervacije</a>
+                      <a class="nav-link" href="rezervacije.html?user=2" >Rezervacije</a>
                   </li>
 
                 </ul>
@@ -32,31 +32,31 @@
     </header>
     <div class="container">
         <p class="h3 my-5">Unesite infromacije o kolima</p>
-        <form>
+        <form action="lada.html">
             <div class="form-group my-3">
                 <label for="adresaVozila">Gde se Vaše vozilo nalazi?</label>
-                <input type="text" class="form-control" id="adresaVozila" placeholder="Unesite adresu" required>
+                <input type="text" class="form-control" id="adresaVozila" placeholder="Unesite adresu" value="Beograd" required>
             </div>
             <div class="input-group">                
                 <div class="form-group my-3 mr-3">
                     <label for="godinaProizvodnje">Godina proizvodnje</label>
-                    <input type="number" min="1900" max = "2099" step="1" value="2022" class="form-control" id="godinaProzvodnje" required>
+                    <input type="number" min="1900" max = "2099" step="1" value="2022" class="form-control" id="godinaProzvodnje" value="2021" required>
                 </div>
                 <div class="form-group my-3 mx-3">
                     <label for="marka">Marka</label>
-                    <input type="text" class="form-control" id="marka" placeholder="Marka" required>
+                    <input type="text" class="form-control" id="marka" placeholder="Marka" value="Lada" required>
                 </div>
                 <div class="form-group my-3 mx-3">
                     <label for="model">Model</label>
-                    <input type="text" class="form-control" id="model" placeholder="Model" required>
+                    <input type="text" class="form-control" id="model" placeholder="Model" value="Niva" required>
                 </div>
                 <div class="form-group my-3 mx-3">
                     <label for="model">Kilometraža</label>
                     <select class="form-select" aria-label="Izaberite raspon" required>
-                        <option selected disabled>Izaberi</option>
+                        <option disabled>Izaberi</option>
                         <option value="1">0-20k km</option>
                         <option value="2">20-40k km</option>
-                        <option value="3">40-60k km</option>
+                        <option selected value="3">40-60k km</option>
                         <option value="4">60-80k km</option>
                         <option value="5">80-100k km</option>
                         <option value="6">100-120k km</option>
@@ -85,12 +85,12 @@
                 <div class="form-group my-3 mr-3">
                     <label for="model">Tip vozila</label>
                     <select class="form-select" aria-label="Izaberite" required>
-                        <option selected disabled>Izaberi</option>
+                        <option disabled>Izaberi</option>
                         <option value="1">Sedan</option>
                         <option value="2">Kupe</option>
                         <option value="3">Kabriolet</option>
                         <option value="4">Karavan</option>
-                        <option value="5">SUV</option>
+                        <option selected value="5">SUV</option>
                         <option value="6">Kombi</option>
                         <option value="7">Kamion</option>
                     </select>
@@ -98,18 +98,18 @@
                 <div class="form-group my-3 mx-3">
                     <label for="model">Gorivo</label>
                     <select class="form-select" aria-label="Izaberite" required>
-                        <option selected disabled>Izaberi</option>
+                        <option disabled>Izaberi</option>
                         <option value="1">Dizel</option>
-                        <option value="2">Benzin</option>
+                        <option selected value="2">Benzin</option>
                         <option value="3">Hibrid</option>
                         <option value="4">Električni</option>
                     </select>
                 </div>
                 <div class="form-group my-3 mx-3">
                     <div class="input-group">
-                        <label for="model">Cena po danu (u &euro;): </label> <input type="number" min="10" max = "205" class="form-control mx-3" size="3" id="rangeVal">
+                        <label for="model">Cena po danu (u &euro;): </label> <input type="number" min="10" max = "205" class="form-control mx-3" size="3" value="30" id="rangeVal">
                     </div>
-                    <input type="range" class="form-range mt-2" min="10" max="205" id="customRange2" required>
+                    <input type="range" class="form-range mt-2" min="10" max="205" id="customRange2" value="30" required>
                 </div>
             </div>
 
@@ -121,10 +121,10 @@
             </div>
             <div class="form-group">
               <label for="opis-kola">Opis vozila</label>
-              <textarea class="form-control" id="opis-kola" rows="5" required></textarea>
+              <textarea class="form-control" id="opis-kola" rows="5" required>Neki opis ovde</textarea>
             </div>
             <div class="form-group my-3">
-                <input type="submit" class="btn btn-dark"  value="Pošalji">
+                <input type="submit" class="btn btn-dark"  value="Izmeni">
             </div>
 
         </form>
